fix(UI): overall cards font overflow problem (#708)

--- a/packages/components/src/components/Overall/bundle.module.scss
+++ b/packages/components/src/components/Overall/bundle.module.scss
@@ -16,6 +16,10 @@
 }
 
 .description {
+  @media (max-width: 1500px) {
+    font-size: 16px;
+  }
+
   font-size: 20px;
   font-weight: 500;
   line-height: 32px;
